1. Метод .of [#447016]