@@ -3,11 +3,10 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertThat;
 
 public class ConvertListTest {
     @Test
@@ -16,7 +15,7 @@ public class ConvertListTest {
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
         in.add(new int[] {5, 3, 8});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 5, 3, 8);
+        List<Integer> expect = List.of(1, 2, 3, 5, 3, 8);
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
